--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mostafa Meliani"
-  avatar           : "images/profile1.png"
+  avatar           : "profile.png"
   bio              : "PhD candidate at Radboud University"
   location         : "Nijmegen, the Netherlands"
   employer         :
