added address, fixed different font sizes

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Mostafa Meliani"
   avatar           : "profile1.png"
   bio              : "PhD candidate at Radboud University"
-  location         : "Nijmegen, the Netherlands"
+  location         : "Nijmegen, The Netherlands"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.nl/citations?user=2my0vvwAAAAJ&hl=en"
