--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,13 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
   - title: "CV"
     url: /cv/
+
+  - title: "Seminars"
+    url: /seminars/
 
