--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mostafa Meliani"
-  avatar           : "profile1.png"
+  avatar           : "Cropped_profile.JPG"
   bio              : "PhD candidate at Radboud University"
   location         : "Nijmegen, The Netherlands"
   employer         :
