--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ author:
   facebook         :
   foursquare       :
   github           : #"m-meliani"
+  arxiv	   : https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M
   google_plus      :
   keybase          :
   instagram        :
