--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   links:
     - label: "arXiv"
     - icon: "far fa-newspaper"
-    - url: https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M
+    - url: "https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M"
 		
 
 # Reading Files
