--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : "https://scholar.google.nl/citations?user=2my0vvwAAAAJ&hl=en"
   email            : "m.meliani@math.ru.nl"
   researchgate     : "https://www.researchgate.net/profile/Mostafa-Meliani"
-  uri              :
+ # uri              :
   bitbucket        :
   codepen          :
   dribbble         :
@@ -97,7 +97,7 @@ author:
   facebook         :
   foursquare       :
   github           : #"m-meliani"
-  arxiv            : "https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M"
+  uri              : "https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M"
   google_plus      :
   keybase          :
   instagram        :
