--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   orcid            : "https://orcid.org/0000-0002-8172-0055"
   links:
     - label: "arXiv"
-      icon: "far fa-newspaper"
+      icon: "fas fa-fw fa-link"
       url: "https://arxiv.org/search/?searchtype=author&query=Meliani%2C+M"
 
 # Reading Files
