--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,6 @@ main:
   - title: "Seminars"
     url: /seminars/
 
-  - title: "@Misc"
-    url: /miscellaneous/
+#  - title: "@Misc"
+#    url: /miscellaneous/
 
