--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Mostafa Meliani"
 title_separator          : "-"
 name                     : &name "Mostafa Meliani"
-description              : &description "PhD candidate at Radboud University"
+description              : &description "Postdoctoral Researcher"
 url                      : https://m-meliani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "m-meliani.github.io"
