--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,10 @@ analytics:
 author:
   name             : "Mostafa Meliani"
   avatar           : "Cropped_profile.JPG"
-  bio              : "PhD candidate at Radboud University"
-  location         : "Nijmegen, The Netherlands"
+  bio              : "Postdoctoral Researcher"
+  location         : "Prague, Czech Republic"
   googlescholar    : "https://scholar.google.nl/citations?user=2my0vvwAAAAJ&hl=en"
-  email            : "m.meliani@math.ru.nl"
+  email            : "meliani@math.cas.cz"
   researchgate     : "https://www.researchgate.net/profile/Mostafa-Meliani"
   orcid            : "https://orcid.org/0000-0002-8172-0055"
   links:
