--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Mostafa Meliani"
 title_separator          : "-"
 name                     : &name "Mostafa Meliani"
-description              : &description "Postdoctoral Researcher"
+description              : &description "Research Associate"
 url                      : https://m-meliani.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "m-meliani.github.io"
@@ -82,10 +82,10 @@ analytics:
 author:
   name             : "Mostafa Meliani"
   avatar           : "Cropped_profile.JPG"
-  bio              : "Postdoctoral Researcher"
-  location         : "Prague, Czech Republic"
+  bio              : "Research Associate (Postdoc)"
+  location         : "Bath, UK"
   googlescholar    : "https://scholar.google.nl/citations?user=2my0vvwAAAAJ&hl=en"
-  email            : "meliani@math.cas.cz"
+  email            : "mm4138@bath.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Mostafa-Meliani"
   orcid            : "https://orcid.org/0000-0002-8172-0055"
   links:
